[+] Adding a first sight of tokenizer. Now can recognize START and SYMBOL aka alpha + _ words.

--- a/lib/memory_lib/Makefile
+++ b/lib/memory_lib/Makefile
@@ -31,9 +31,4 @@ $(NAME): $(OBJ_SRC)
 clean:
 	@rm -f $(OBJ_SRC)
 
-fclean: clean
-	@rm -f ../../build/lib/$(NAME)
-
-re: fclean all
-
-.PHONY: all clean fclean re
+.PHONY: all clean
