--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,39 @@ jobs:
 
       - name: Display runner info
         run: |
-            echo "Running on ${{ matrix.runner }} - Arch: ${{ matrix.arch }}"
-            uname -a || systeminfo
+          echo "Running on ${{ matrix.runner }} - Arch: ${{ matrix.arch }}"
+          uname -a || systeminfo
 
       - name: Run make
         shell: bash
         run: |
-            echo "Build with make on ${{ matrix.runner }} (${{ matrix.arch }})"
-            make
+          echo "Build with make on ${{ matrix.runner }} (${{ matrix.arch }})"
+          make
+      
+      - name: Archive binary
+        run: |
+          mkdir -p dist
+          cp ./valkac dist/valka-compiler-${{ matrix.runner }}-${{ matrix.arch }}
+      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: valka-compiler-${{ matrix.runner }}-${{ matrix.arch }}
+          path: dist/*
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/**/*
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
