build(debian runner): remove debian runner since GitHub doesn't have one to try easily right now

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
           - runner: ubuntu-latest
             arch: arm64
 
-          - runner: debian-latest
-            arch: x64
+          #- runner: debian-latest
+          #  arch: x64
 
           - runner: windows-latest
             arch: x64
