build(make to CMake): change the build system from make to CMake, change the github workflows as well

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,12 +41,11 @@ jobs:
           uname -a || systeminfo
 
 
-      - name: Run make
+      - name: Run CMake
         shell: bash
         run: |
           echo "Build with make on ${{ matrix.runner }} (${{ matrix.arch }})"
-          make
-
+          ./build.sh
 
       - name: Archive binary
         run: |
