--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,11 +45,7 @@ jobs:
         shell: bash
         run: |
           echo "Build on ${{ matrix.runner }} (${{ matrix.arch }})"
-          if [[ "${{ matrix.runner }}" == "windows-latest" ]]; then
-            ./build_windows.sh
-          else
-            ./build_linux_mac.sh
-          fi
+          ./build.sh
 
       - name: Archive binary
         run: |
